# cmake-examples

./: README.md
0001_add_executable/: CMakeLists.txt
0002_add_library_static/: CMakeLists.txt  add.cpp  main.cpp
0003_add_library_dll/: CMakeLists.txt  add.h
0004_add_subdirectory/: CMakeLists.txt
0004_add_subdirectory/subDir/: CMakeLists.txt  main.cpp
0005_add_opencv/: CMakeLists.txt  main.cpp
0006_add_qt/: CMakeLists.txt
0007_image_export/: CMakeLists.txt  image_export.cpp  image_export.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
0008_framework/Resources/: ResourceManager.txt  SceneManager.txt
0008_framework/Resources/Shaders/: FireFS.fs  FireVS.vs  LightFS.fs  LightVS.vs  NormalMappingFS.fs  NormalMappingVS.vs  PhongLightFS.fs  PhongLightVS.vs  ReflectionFS.fs  ReflectionVS.vs  SkyBoxFS.fs  TriangleGridFS.fs  TriangleGridVS.vs  TriangleShaderFS.fs  TriangleShaderVS.vs
0008_framework/TrainingFramework/: Camera.cpp  Camera.h  CubeTex.cpp  CubeTex.h  HeightMap.cpp  HeightMap.h  Lights.cpp  Lights.h  Model.cpp  Model.h  Object.cpp  Object.h  ResourceMgr.cpp  ResourceMgr.h  SceneMgr.cpp  SceneMgr.h  Shaders.cpp  Shaders.h  SkyBoxFS.fs  SkyBoxVS.vs  Texture.cpp  Texture.h  TrainingFramework.cpp  TrainingFramework.vcxproj  TrainingFramework.vcxproj.filters  Vertex.h
0009_imgui/: CMakeLists.txt
0009_imgui/libs/imgui/: CMakeLists.txt
0009_imgui/src/: main.cpp
0010_opengl_freeglut/: CMakeLists.txt  main.cpp
0010_opengl_freeglut/examples/: double.c  lines.c  polys.c  varray.c
0011_camera_opengl/: CMakeLists.txt  main.cpp
0012_camera_songho/: CMakeLists.txt  Primitives.cpp  Primitives.h
0013_glut_imgui_load_image/: CMakeLists.txt  imgui.ini  main.cpp
0015_fetch_opencv/: App.cpp  App.hpp  CMakeLists.txt  imgui.ini
0016_logging/: CMakeLists.txt  main.cpp
mfc1/: mfc1.rc
